fea-rs/test-data/compile-tests/mini-latin/bad/variable_condset_oob.fea
conditionset inval {
	wght -100 4004;
} inval;
